--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 pandas-ta
-finta
+finta>=1.3
 ta-lib
-optuna
+optuna>=2.10.0
 pathos
-tabulate
-scikit-learn
-pareto
+tabulate>=0.8.9
+scikit-learn>=1.0
+pareto>=1.1.1.post3
+pandas>=1.3.0
+numpy>=1.20.3
+ray>=1.6.0
+scipy>=1.7.0
+tuneta>=0.1.25
+setuptools>=57.0.0
+yfinance>=0.1.63
